Finshed city edits.

--- a/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -101,20 +101,21 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CameraSpeedScalar=19.224205
 CurrentPosGridSize=4
 CurrentScalingGridSize=4
+CameraSpeed=1
 
 [MRU]
-MRUItem0=/Game/StreetSceneLarge
-MRUItem1=/Game/StreetSceneLarge_AR
-MRUItem2=/Game/StreetSceneLarge1_JFS
-MRUItem3=/Game/JFS/StreetSceneLarge1_JFS
-MRUItem4=/Game/StreetSceneLarge_Lin_Pan
-MRUItem5=/Game/StreetScene_PJH
-MRUItem6=/Game/StreetSceneLarge_CIR
-MRUItem7=/Game/StreetSceneLarge_JC
-MRUItem8=/Game/StreetSceneLarge_JJ
-MRUItem9=/Game/StreetSceneLarge_SD
-MRUItem10=/Game/StreetSceneLarge_ST
-MRUItem11=/Game/StreetSceneLarge_YCF
+MRUItem0=/Game/DMS/StreetSceneLarge_DMS
+MRUItem1=/Game/StreetSceneLarge
+MRUItem2=/Game/StreetSceneLarge_AR
+MRUItem3=/Game/StreetSceneLarge1_JFS
+MRUItem4=/Game/JFS/StreetSceneLarge1_JFS
+MRUItem5=/Game/StreetSceneLarge_Lin_Pan
+MRUItem6=/Game/StreetScene_PJH
+MRUItem7=/Game/StreetSceneLarge_CIR
+MRUItem8=/Game/StreetSceneLarge_JC
+MRUItem9=/Game/StreetSceneLarge_JJ
+MRUItem10=/Game/StreetSceneLarge_SD
+MRUItem11=/Game/StreetSceneLarge_ST
 
 [LightingBuildOptions]
 QualityLevel=3
@@ -133,7 +134,7 @@ LodDistance6=0.000000
 LodDistance7=0.000000
 
 [EditorStartup]
-LastLevel=/Game/StreetSceneLarge
+LastLevel=/Game/DMS/StreetSceneLarge_DMS
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -816,6 +817,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/DMS/woodBlocksContent/N_WoodTexture001_AP_Mat.N_WoodTexture001_AP_Mat;
 RecentlyPlaced=/Game/Andrew_Radford_Content/AR_blocks_3.AR_blocks_3;
 RecentlyPlaced=/Game/Andrew_Radford_Content/AR_blocks_1.AR_blocks_1;
 RecentlyPlaced=/Game/Andrew_Radford_Content/Train/train.train;
@@ -835,7 +837,6 @@ RecentlyPlaced=/Game/HaydenMatthewsContent/Block_with_Chambers.Block_with_Chambe
 RecentlyPlaced=/Game/HaydenMatthewsContent/Wood_Car.Wood_Car;
 RecentlyPlaced=/Game/HaydenMatthewsContent/TextureAttempt189999.TextureAttempt189999;
 RecentlyPlaced=/Game/HaydenMatthewsContent/MannequinWithTexture.MannequinWithTexture;
-RecentlyPlaced=/Game/HaydenMatthewsContent/_BrushTxtr_Mat._BrushTxtr_Mat;
 None=======
 
 [MessageLog]
@@ -861,7 +862,7 @@ ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/DMS/woodBlocksContent
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -875,25 +876,25 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/StreetSceneLarge
-MRUItem1=/Game/StreetSceneLarge_AR
-MRUItem2=/Game/StreetSceneLarge1_JFS
-MRUItem3=/Game/JFS/StreetSceneLarge1_JFS
-MRUItem4=/Game/StreetSceneLarge_Lin_Pan
-MRUItem5=/Game/StreetScene_PJH
-MRUItem6=/Game/Sujay_Tripathy_Content/manmat
-MRUItem7=/Game/HaydenMatthewsContent/PM3D_Mannequin2
-MRUItem8=/Game/HaydenMatthewsContent/PM3D_Mannequin2_Texture_Mat
-MRUItem9=/Game/StreetSceneLarge_CIR
-MRUItem10=/Game/StreetSceneLarge_JC
-MRUItem11=/Game/StreetSceneLarge_JJ
-MRUItem12=/Game/StreetSceneLarge_SD
-MRUItem13=/Game/StreetSceneLarge_ST
-MRUItem14=/Game/StreetSceneLarge_YCF
-MRUItem15=/Game/StreetSceneLarge_AC
-MRUItem16=/Game/Shakti_Das_Content/M_WoodBlock_Instance_5
-MRUItem17=/Game/Shakti_Das_Content/Mannequin/WoodenPerson4ZBrush2
-MRUItem18=/Game/DMS/StreetSceneLarge_DMS
+MRUItem0=/Game/DMS/StreetSceneLarge_DMS
+MRUItem1=/Game/StreetSceneLarge
+MRUItem2=/Game/StreetSceneLarge_AR
+MRUItem3=/Game/StreetSceneLarge1_JFS
+MRUItem4=/Game/JFS/StreetSceneLarge1_JFS
+MRUItem5=/Game/StreetSceneLarge_Lin_Pan
+MRUItem6=/Game/StreetScene_PJH
+MRUItem7=/Game/Sujay_Tripathy_Content/manmat
+MRUItem8=/Game/HaydenMatthewsContent/PM3D_Mannequin2
+MRUItem9=/Game/HaydenMatthewsContent/PM3D_Mannequin2_Texture_Mat
+MRUItem10=/Game/StreetSceneLarge_CIR
+MRUItem11=/Game/StreetSceneLarge_JC
+MRUItem12=/Game/StreetSceneLarge_JJ
+MRUItem13=/Game/StreetSceneLarge_SD
+MRUItem14=/Game/StreetSceneLarge_ST
+MRUItem15=/Game/StreetSceneLarge_YCF
+MRUItem16=/Game/StreetSceneLarge_AC
+MRUItem17=/Game/Shakti_Das_Content/M_WoodBlock_Instance_5
+MRUItem18=/Game/Shakti_Das_Content/Mannequin/WoodenPerson4ZBrush2
 MRUItem19=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
 
 [MaterialInstanceEditor]
@@ -989,14 +990,14 @@ None=======
 ScreenPosition=X=122.400 Y=46.400
 ScreenPosition=X=313.000 Y=153.000
 ScreenPosition=X=122.400 Y=46.400
-ScreenPosition=X=395.000 Y=112.000
+ScreenPosition=X=394.400 Y=112.000
 None=======
 None=======
 /Game/Chuanqi_Liu_Content/Wood_Chuanqi.Wood_Chuanqi=1
 /Game/Sujay_Tripathy_Content/FbxScene_Block1.FbxScene_Block1=1
 /Game/Sujay_Tripathy_Content/FbxScene_Block2.FbxScene_Block2=1
 /Game/Sujay_Tripathy_Content/FbxScene_Block3.FbxScene_Block3=1
-WindowSize=X=1280.000 Y=750.000
+WindowSize=X=1280.000 Y=749.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
