--- a/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -81,15 +81,15 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [MRU]
-MRUItem0=/Game/StreetSceneLarge_JJ
-MRUItem1=/Game/StreetSceneLarge
-MRUItem2=/Game/StreetScene_HaydenMatthews
-MRUItem3=/Game/StreetSceneLarge_JC
-MRUItem4=/Game/StreetSceneLarge_YCF
-MRUItem5=/Game/StreetSceneLarge_ST
-MRUItem6=/Game/StreetSceneLarge_SD
-MRUItem7=/Game/StreetSceneLarge_Lin_Pan
-MRUItem8=/Game/StreetSceneLarge_HaydenMatthews
+MRUItem0=/Game/StreetSceneLarge_HaydenMatthews
+MRUItem1=/Game/StreetSceneLarge_JJ
+MRUItem2=/Game/StreetSceneLarge
+MRUItem3=/Game/StreetScene_HaydenMatthews
+MRUItem4=/Game/StreetSceneLarge_JC
+MRUItem5=/Game/StreetSceneLarge_YCF
+MRUItem6=/Game/StreetSceneLarge_ST
+MRUItem7=/Game/StreetSceneLarge_SD
+MRUItem8=/Game/StreetSceneLarge_Lin_Pan
 MRUItem9=/Game/StreetSceneLarge_CIR
 MRUItem10=/Game/StreetScene_PJH
 MRUItem11=/Game/StreetSceneLarge_AR
@@ -111,10 +111,10 @@ LodDistance6=0.000000
 LodDistance7=0.000000
 
 [EditorStartup]
-LastLevel=/Game/StreetSceneLarge_JJ
+LastLevel=/Game/StreetSceneLarge_HaydenMatthews
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -795,26 +795,26 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/BB/Block_2.Block_2;
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Game/Jason_Jackson_Content/HollowCubeWithBase.HollowCubeWithBase;
+RecentlyPlaced=/Game/Jason_Jackson_Content/Pylon.Pylon;
+RecentlyPlaced=/Game/HaydenMatthewsContent/Block_with_Chambers.Block_with_Chambers;
+RecentlyPlaced=/Game/HaydenMatthewsContent/Hourglass.Hourglass;
+RecentlyPlaced=/Game/HaydenMatthewsContent/pCube3Mat.pCube3Mat;
+RecentlyPlaced=/Game/BB/Arch_Block.Arch_Block;
+RecentlyPlaced=/Game/HaydenMatthewsContent/pCube1Mat.pCube1Mat;
+RecentlyPlaced=/Game/Andrew_Baldrige_Content/Building_Blocks/Half_Wall_Block.Half_Wall_Block;
 RecentlyPlaced=/Game/Chuanqi_Liu_Content/Wood_Chuanqi.Wood_Chuanqi;
 RecentlyPlaced=/Game/BB/halfCylinder.halfCylinder;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/BB/Arch_Block.Arch_Block;
 RecentlyPlaced=/Game/BB/FbxScene_Block1.FbxScene_Block1;
-RecentlyPlaced=/Game/BB/Block_2.Block_2;
 RecentlyPlaced=/Game/BB/Block_1.Block_1;
 RecentlyPlaced=/Game/BB/Corner_Stair_Block.Corner_Stair_Block;
 RecentlyPlaced=/Game/BB/Block_with_Chambers.Block_with_Chambers;
 RecentlyPlaced=/Game/BB/03.03;
 RecentlyPlaced=/Game/BB/L_shape.L_shape;
 RecentlyPlaced=/Game/BB/pyramid.pyramid;
-RecentlyPlaced=/Game/BB/Hourglass.Hourglass;
-RecentlyPlaced=/Game/BB/02.02;
-RecentlyPlaced=/Game/BB/Shak_WoodBlock_2_REDONE.Shak_WoodBlock_2_REDONE;
-RecentlyPlaced=/Game/BB/Shak_WoodBlock_1.Shak_WoodBlock_1;
-RecentlyPlaced=/Game/BB/Shak_WoodBlock_3.Shak_WoodBlock_3;
-RecentlyPlaced=/Game/DMS/Block_3.Block_3;
-RecentlyPlaced=/Game/Jason_Jackson_Content/Pylon.Pylon;
-RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 None=======
 
 [MessageLog]
@@ -854,15 +854,15 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/StreetSceneLarge_JJ
-MRUItem1=/Game/StreetSceneLarge
-MRUItem2=/Game/StreetScene_HaydenMatthews
-MRUItem3=/Game/StreetSceneLarge_JC
-MRUItem4=/Game/StreetSceneLarge_YCF
-MRUItem5=/Game/StreetSceneLarge_ST
-MRUItem6=/Game/StreetSceneLarge_SD
-MRUItem7=/Game/StreetSceneLarge_Lin_Pan
-MRUItem8=/Game/StreetSceneLarge_HaydenMatthews
+MRUItem0=/Game/StreetSceneLarge_HaydenMatthews
+MRUItem1=/Game/StreetSceneLarge_JJ
+MRUItem2=/Game/StreetSceneLarge
+MRUItem3=/Game/StreetScene_HaydenMatthews
+MRUItem4=/Game/StreetSceneLarge_JC
+MRUItem5=/Game/StreetSceneLarge_YCF
+MRUItem6=/Game/StreetSceneLarge_ST
+MRUItem7=/Game/StreetSceneLarge_SD
+MRUItem8=/Game/StreetSceneLarge_Lin_Pan
 MRUItem9=/Game/StreetSceneLarge_CIR
 MRUItem10=/Game/StreetScene_PJH
 MRUItem11=/Game/StreetSceneLarge_AR
@@ -1776,7 +1776,7 @@ AssetEditorOpenLocation=Default
 bEnableColorizedEditorTabs=True
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
-CurrentPosGridSize=4
+CurrentPosGridSize=1
 bInvertMouseLookYAxis=False
 bInvertOrbitYAxis=False
 bInvertMiddleMousePan=False
