--- a/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -114,7 +114,7 @@ LodDistance7=0.000000
 LastLevel=/Game/StreetSceneLarge
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -795,6 +795,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/woodBlocksContent/M_DarkWood_AP_Inst.M_DarkWood_AP_Inst;
 RecentlyPlaced=/Game/BB/L_shape.L_shape;
 RecentlyPlaced=/Game/BB/HollowCubeWithBase.HollowCubeWithBase;
@@ -814,7 +815,6 @@ RecentlyPlaced=/Game/BB/Half_Wall_Block.Half_Wall_Block;
 RecentlyPlaced=/Game/BB/Shak_WoodBlock_2_REDONE.Shak_WoodBlock_2_REDONE;
 RecentlyPlaced=/Game/BB/03.03;
 RecentlyPlaced=/Game/BB/Arch_Block.Arch_Block;
-RecentlyPlaced=/Game/BB/3.3;
 None=======
 
 [MessageLog]
