--- a/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -114,7 +114,7 @@ LodDistance7=0.000000
 LastLevel=/Game/StreetSceneLarge
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -873,6 +873,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/JFS/mannequins_flash/flash.flash;
 RecentlyPlaced=/Game/JFS/woodBlocksContent_JFS/WoodTexture004.WoodTexture004;
 RecentlyPlaced=/Game/JFS/woodBlocksContent_JFS/M_SidewalkBlock_AP_Inst.M_SidewalkBlock_AP_Inst;
 RecentlyPlaced=/Game/JFS/woodBlocksContent_JFS/wood_car_no_texture.wood_car_no_texture;
@@ -892,7 +893,6 @@ RecentlyPlaced=/Game/Alexander_Cervantes_Content/Assignemnt_4_2.Assignemnt_4_2;
 RecentlyPlaced=/Game/Alexander_Cervantes_Content/Assignemnt_4.Assignemnt_4;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/woodBlocksContent/M_DarkWood_AP_Inst.M_DarkWood_AP_Inst;
-RecentlyPlaced=/Game/BB/L_shape.L_shape;
 None=======
 
 [MessageLog]
@@ -933,9 +933,9 @@ GlobalAssetPicker.CurrentViewType=0
 
 [ContentBrowserRecent]
 MRUItem0=/Game/StreetSceneLarge
-MRUItem1=/Game/JFS/woodBlocksContent_JFS/wood_car_no_texture
-MRUItem2=/Game/BB/Block_1
-MRUItem3=/Game/StreetSceneLarge1_JFS
+MRUItem1=/Game/StreetSceneLarge1_JFS
+MRUItem2=/Game/JFS/woodBlocksContent_JFS/wood_car_no_texture
+MRUItem3=/Game/BB/Block_1
 MRUItem4=/Game/StreetSceneLarge_YCF
 MRUItem5=/Game/Alexander_Cervantes_Content/polySurface27Mat2
 MRUItem6=/Game/Alexander_Cervantes_Content/P_Rain
