--- a/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -873,6 +873,9 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Chuanqi_Liu_Content/woodbase.woodbase;
+RecentlyPlaced=/Game/BB/Block_3.Block_3;
+RecentlyPlaced=/Game/Chuanqi_Liu_Content/woodbase_Inst.woodbase_Inst;
 RecentlyPlaced=/Game/Chuanqi_Liu_Content/ChuanqiLiuMannequinn/manmat.manmat;
 RecentlyPlaced=/Game/Chuanqi_Liu_Content/ChuanqiLiuMannequinn/MANNEQUIN.MANNEQUIN;
 RecentlyPlaced=/Game/JFS/mannequins_flash/flash.flash;
@@ -890,9 +893,6 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
-RecentlyPlaced=/Game/Alexander_Cervantes_Content/Assignemnt_4_3.Assignemnt_4_3;
-RecentlyPlaced=/Game/Alexander_Cervantes_Content/Assignemnt_4_2.Assignemnt_4_2;
-RecentlyPlaced=/Game/Alexander_Cervantes_Content/Assignemnt_4.Assignemnt_4;
 None=======
 
 [MessageLog]
@@ -918,7 +918,7 @@ ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game
-ContentBrowserTab1.SelectedPaths=/Game/Chuanqi_Liu_Content/ChuanqiLiuMannequinn
+ContentBrowserTab1.SelectedPaths=/Game/Chuanqi_Liu_Content
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -932,26 +932,26 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Chuanqi_Liu_Content/ChuanqiLiuMannequinn/manmat
-MRUItem1=/Game/StreetScene_HaydenMatthews
-MRUItem2=/Game/StreetSceneLarge
-MRUItem3=/Game/StreetSceneLarge1_JFS
-MRUItem4=/Game/JFS/woodBlocksContent_JFS/wood_car_no_texture
-MRUItem5=/Game/BB/Block_1
-MRUItem6=/Game/StreetSceneLarge_YCF
-MRUItem7=/Game/Alexander_Cervantes_Content/polySurface27Mat2
-MRUItem8=/Game/Alexander_Cervantes_Content/P_Rain
-MRUItem9=/Game/Alexander_Cervantes_Content/polySurface27Mat1
-MRUItem10=/Game/MyStuff/M_WoodMIne
-MRUItem11=/Game/StreetSceneLarge_AC
-MRUItem12=/Game/Alexander_Cervantes_Content/Wood_Car_Texture
-MRUItem13=/Game/StreetSceneLarge_SD
-MRUItem14=/Game/StreetSceneLarge_JJ
-MRUItem15=/Game/StreetSceneLarge_CIR
-MRUItem16=/Game/StreetSceneLarge_HaydenMatthews
-MRUItem17=/Game/StreetSceneLarge_Lin_Pan
-MRUItem18=/Game/StreetSceneLarge_JC
-MRUItem19=/Game/StreetSceneLarge_ST
+MRUItem0=/Game/Chuanqi_Liu_Content/woodbase_Inst
+MRUItem1=/Game/Chuanqi_Liu_Content/woodbase
+MRUItem2=/Game/Andrew_Baldrige_Content/Building_Blocks/Wood_Block_Mtl_Inst
+MRUItem3=/Game/Andrew_Radford_Content/group2_pasted__group_pasted__pasted__pCube1Mat
+MRUItem4=/Game/Andrew_Radford_Content/pasted__pCube1Mat
+MRUItem5=/Game/Christian_Roy_Content/WoodBlock/M_MasterWoodBlock_AP
+MRUItem6=/Game/Christian_Roy_Content/WoodBlock/M_WoodBlock_AP_Inst002
+MRUItem7=/Game/Chuanqi_Liu_Content/Wood_Chuanqi
+MRUItem8=/Game/StreetScene_HaydenMatthews
+MRUItem9=/Game/Chuanqi_Liu_Content/ChuanqiLiuMannequinn/manmat
+MRUItem10=/Game/StreetSceneLarge
+MRUItem11=/Game/StreetSceneLarge1_JFS
+MRUItem12=/Game/JFS/woodBlocksContent_JFS/wood_car_no_texture
+MRUItem13=/Game/BB/Block_1
+MRUItem14=/Game/StreetSceneLarge_YCF
+MRUItem15=/Game/Alexander_Cervantes_Content/polySurface27Mat2
+MRUItem16=/Game/Alexander_Cervantes_Content/P_Rain
+MRUItem17=/Game/Alexander_Cervantes_Content/polySurface27Mat1
+MRUItem18=/Game/MyStuff/M_WoodMIne
+MRUItem19=/Game/StreetSceneLarge_AC
 
 [MaterialInstanceEditor]
 bShowGrid=False
@@ -1054,6 +1054,12 @@ None=======
 /Game/BB/Block_1.Block_1=1
 /Game/JFS/woodBlocksContent_JFS/wood_car_no_texture.wood_car_no_texture=1
 /Game/Chuanqi_Liu_Content/ChuanqiLiuMannequinn/manmat.manmat=1
+/Game/Chuanqi_Liu_Content/Wood_Chuanqi.Wood_Chuanqi=1
+/Game/Chuanqi_Liu_Content/woodbase.woodbase=1
+/Game/Chuanqi_Liu_Content/woodbase_Inst.woodbase_Inst=1
+/Game/Christian_Roy_Content/WoodBlock/M_WoodBlock_AP_Inst002.M_WoodBlock_AP_Inst002=1
+/Game/Andrew_Radford_Content/pasted__pCube1Mat.pasted__pCube1Mat=1
+/Game/Andrew_Radford_Content/group2_pasted__group_pasted__pasted__pCube1Mat.group2_pasted__group_pasted__pasted__pCube1Mat=1
 
 [RootWindow]
 ScreenPosition=X=122.400 Y=46.400
@@ -1754,7 +1760,7 @@ PrimType=1
 [DetailPropertyExpansion]
 MaterialEditorInstanceConstant=
 MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[2].Parameters.Parameters[0].Object.ParameterValue\" "
-MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[2].Parameters.Parameters[0].Object.ParameterValue\" "
+MaterialEditorInstanceConstant=
 Object=
 Object=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
