--- a/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -114,7 +114,7 @@ LodDistance7=0.000000
 LastLevel=/Game/StreetSceneLarge
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -873,26 +873,26 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
-RecentlyPlaced=/Game/JFS/mannequins_flash/flash.flash;
-RecentlyPlaced=/Game/JFS/woodBlocksContent_JFS/WoodTexture004.WoodTexture004;
-RecentlyPlaced=/Game/JFS/woodBlocksContent_JFS/M_SidewalkBlock_AP_Inst.M_SidewalkBlock_AP_Inst;
-RecentlyPlaced=/Game/JFS/woodBlocksContent_JFS/wood_car_no_texture.wood_car_no_texture;
+RecentlyPlaced=/Game/Christian_Roy_Content/WoodBlock/T_Wood_01.T_Wood_01;
+RecentlyPlaced=/Game/Christian_Roy_Content/WoodBlock/T_Wood_02.T_Wood_02;
+RecentlyPlaced=/Game/Christian_Roy_Content/WoodBlock/M_MasterWoodBlock_AP.M_MasterWoodBlock_AP;
+RecentlyPlaced=/Game/Andrew_Radford_Content/Train/phong1.phong1;
+RecentlyPlaced=/Game/Chuanqi_Liu_Content/wood.wood;
+RecentlyPlaced=/Game/Christian_Roy_Content/WoodBlock/M_WoodBlock_AP_Inst002.M_WoodBlock_AP_Inst002;
+RecentlyPlaced=/Game/Christian_Roy_Content/WoodBlock/T_Wood_01_Mat.T_Wood_01_Mat;
+RecentlyPlaced=/Game/BB/pyramid.pyramid;
+RecentlyPlaced=/Game/BB/Block_1.Block_1;
+RecentlyPlaced=/Game/BB/Hourglass.Hourglass;
+RecentlyPlaced=/Game/BB/M_Woodblock.M_Woodblock;
+RecentlyPlaced=/Game/BB/3.3;
+RecentlyPlaced=/Game/BB/Block_with_Chambers.Block_with_Chambers;
+RecentlyPlaced=/Game/BB/BeveledCube.BeveledCube;
+RecentlyPlaced=/Game/BB/Arch_Block.Arch_Block;
+RecentlyPlaced=/Game/BB/03.03;
+RecentlyPlaced=/Game/BB/Pylon.Pylon;
 RecentlyPlaced=/Game/JFS/woodBlocksContent_JFS/M_DarkWood_AP_Inst.M_DarkWood_AP_Inst;
-RecentlyPlaced=/Game/BB/02.02;
-RecentlyPlaced=/Game/BB/01.01;
-RecentlyPlaced=/Game/MyStuff/03.03;
-RecentlyPlaced=/Game/JFS/woodBlocksContent_JFS/JFS_Blocks/JFS_Block_2.JFS_Block_2;
-RecentlyPlaced=/Game/Alexander_Cervantes_Content/P_Rain.P_Rain;
-RecentlyPlaced=/Script/Engine.AtmosphericFog;/Engine/Transient.ActorFactoryAtmosphericFog_0
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
-RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
-RecentlyPlaced=/Game/Alexander_Cervantes_Content/Assignemnt_4_3.Assignemnt_4_3;
-RecentlyPlaced=/Game/Alexander_Cervantes_Content/Assignemnt_4_2.Assignemnt_4_2;
-RecentlyPlaced=/Game/Alexander_Cervantes_Content/Assignemnt_4.Assignemnt_4;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Game/woodBlocksContent/M_DarkWood_AP_Inst.M_DarkWood_AP_Inst;
+RecentlyPlaced=/Game/Andrew_Radford_Content/group2_pasted__group_pasted__pasted__pCube1Mat.group2_pasted__group_pasted__pasted__pCube1Mat;
+RecentlyPlaced=/Game/Andrew_Radford_Content/pasted__pCube1Mat.pasted__pCube1Mat;
 None=======
 
 [MessageLog]
